--- a/Examen_Febrero/API2/wwwroot/Index.html
+++ b/Examen_Febrero/API2/wwwroot/Index.html
@@ -13,6 +13,15 @@
             <th>DESCRIPCION</th>
         </tr>
     </table>
+    <form id="formularioInsert">
+        <div>Formulario Para Insertar</div><br />
+        <input type="text" id="txtBName" /><br />
+        <input type="text" id="txtBDesc" /><br />
+        <input type="submit" id="btnGuardar" /><br />
+    </form>
+    <select id="selectBorrar">
+
+    </select>
     <div id="error"></div>
 </body>
 </html>
