Delete con reload

--- a/Examen_Febrero/API2/wwwroot/Index.html
+++ b/Examen_Febrero/API2/wwwroot/Index.html
@@ -20,8 +20,8 @@
         <input type="submit" id="btnGuardar" /><br />
     </form>
     <select id="selectBorrar">
-
     </select>
+    <input type="submit" id="btnEliminar" /><br />
     <div id="error"></div>
 </body>
 </html>
