--- a/Examen_Febrero/API2/wwwroot/Index.html
+++ b/Examen_Febrero/API2/wwwroot/Index.html
@@ -6,7 +6,8 @@
     <script src="js/lostArk.js"></script>
 </head>
 <body>
-    <table id="tablaPlantas" border="1">
+    <img id="charge" style="display:none" src="cargando.gif" />
+    <table style="display:none" id="tablaPlantas" border="1">
         <tr>
             <th>ID</th>
             <th>NOMBRE</th>
